welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:30: error: illegal start of statement
  else setPos(x-1,y)
  ^